crates/cargo-manifest/tests/snapshots/parse__opt_version.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "opt_version",
            edition: None,
            version: None,
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: Some(
        Product {
            path: Some(
                "lib.rs",
            ),
            name: Some(
                "opt_version",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "lib",
                ],
            ),
        },
    ),
    profile: None,
    badges: None,
}
